--- a/website/pages/docs/Review/linear-algebra-review.mdx
+++ b/website/pages/docs/Review/linear-algebra-review.mdx
@@ -1,9 +1,17 @@
 ---
-title: Linear Algebra Review 
+title: Linear Algebra Review
 section: Review
 order: 1
 ---
 
+import { BlockMath } from "react-katex";
+
 # Review of Linear Algebra
 
 This is a place to review all the critical components of linear algebra.
+
+<BlockMath>
+  {`
+       \\int_0^\\infty x^2 dx
+   `}
+</BlockMath>
