--- a/website/pages/docs/Review/linear-algebra-review.mdx
+++ b/website/pages/docs/Review/linear-algebra-review.mdx
@@ -4,14 +4,16 @@ section: Review
 order: 1
 ---
 
-import { BlockMath } from "react-katex";
+import Katex from "../../../components/Katex";
 
 # Review of Linear Algebra
 
 This is a place to review all the critical components of linear algebra.
 
-<BlockMath>
-  {`
-       \\int_0^\\infty x^2 dx
-   `}
-</BlockMath>
+<Katex>{`
+Given a **formula** below
+$$
+s = ut + \\frac{1}{2}at^{2}
+$$
+Calculate the value of $s$ when $u = 10\\frac{m}{s}$ and $a = 2\\frac{m}{s^{2}}$ at $t = 1s$
+`}</Katex>
