Add latex notes

--- a/website/pages/docs/Review/linear-algebra-review.mdx
+++ b/website/pages/docs/Review/linear-algebra-review.mdx
@@ -15,5 +15,26 @@ Given a **formula** below
 $$
 s = ut + \\frac{1}{2}at^{2}
 $$
-Calculate the value of $s$ when $u = 10\\frac{m}{s}$ and $a = 2\\frac{m}{s^{2}}$ at $t = 1s$
+Calculate the value of $s$ when $u = 10 \\frac{m}{s}$ and $a = 2\\frac{m}{s^{2}}$ at $t = 1s$
 `}</Katex>
+
+Testing
+
+OUTSIDE BEFORE!
+<Katex>{`
+$$
+a^2 + b^2 = c^2
+$$
+test
+Testing again
+$$ 
+a^2 
+$$
+inbetween
+$$ 
+a^2 + b^2 = z^2\\ a^2 + b^2 = y^2 
+$$
+ONE LINE
+$$ a^2 + b^2 = z^2\\ a^2 + b^2 = y^2 $$
+`}</Katex>
+OUTSIDE AFTER
