Changed homepage text

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -14,8 +14,8 @@ import heroBackgroundImageURL from "../images/hero-background.png";
 <HeroSection>
   <Hero backgroundImageURL={heroBackgroundImageURL}>
     <HeroBody>
-      <HeroTitle>Your Smooth DOC setup is complete!</HeroTitle>
-      <HeroTeaser>Edit `pages/index.mdx` to personalize homepage.</HeroTeaser>
+      <HeroTitle>This is your place to learn rigorous math!</HeroTitle>
+      <HeroTeaser>Here, we will cover everything you would typically learn in an advanced undergraduate or master's level analysis course. We will provide prerequisites including linear algebra and try to contextualize far more than Rudin!.</HeroTeaser>
       <HeroActionList>
         <HeroAction>
           <Button
@@ -23,7 +23,7 @@ import heroBackgroundImageURL from "../images/hero-background.png";
             forwardedAs="a"
             href="/docs/"
           >
-            Browse Docs
+            Learn now!
           </Button>
         </HeroAction>
       </HeroActionList>
