Changed main Docs Page

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -2,12 +2,10 @@
 title: Documentation
 ---
 
-# Documentation
+# Introduction 
 
-## General Overview 
+Welcome to MyMathNotes. Here you can find a comprehensive collection of notes covering analysis and optimization. This should be comprehensive in the sense that they cover any background knowledge in linear algebra and multivariable calculus that are important, however it is wise to have taken those classes already. 
 
-An example of code block:
+## How to use 
 
-```js
-const foo = 'bar'
-```
+On the left you can find the "Chapters" and their subsections. If your browser is wide enough, on the right will be an outline of the page you are currently viewing, similar to wikipedia. 
